# xml-bench

./: LICENSE  xml-bench.cabal
data/: collect-bold-text.xml
src/: Main.hs
src/XmlBench/: HXT.hs  XMLConduit.hs  XMLLight.hs
